# rapid-development-flask-htmx-tailwind-lectures

./: README.md
01-python-app-setup-rye/flask_htmx_tailwind/src/flask_htmx_tailwind/: __init__.py
03-render-single-rss-feed/flask_htmx_tailwind/: .flaskenv  pyproject.toml
03-render-single-rss-feed/flask_htmx_tailwind/src/flask_htmx_tailwind/: __init__.py
03-render-single-rss-feed/flask_htmx_tailwind/src/flask_htmx_tailwind/templates/: base.html
03-render-single-rss-feed/flask_htmx_tailwind/src/flask_htmx_tailwind/templates/partials/: entry.html
07-creating-rss-feed-templates/flask_htmx_tailwind/src/flask_htmx_tailwind/: __init__.py
07-creating-rss-feed-templates/flask_htmx_tailwind/src/flask_htmx_tailwind/templates/: feed.html
07-creating-rss-feed-templates/flask_htmx_tailwind/src/flask_htmx_tailwind/templates/partials/: entry.html
08-list-of-feeds/flask_htmx_tailwind/src/flask_htmx_tailwind/: __init__.py
11-adding-sidebar-tailwind/flask_htmx_tailwind/src/flask_htmx_tailwind/templates/: feed.html
13-dynamic-pagination/flask_htmx_tailwind/src/flask_htmx_tailwind/: __init__.py
13-dynamic-pagination/flask_htmx_tailwind/src/flask_htmx_tailwind/templates/: feed.html
14-adding-read-status/flask_htmx_tailwind/: README.md
14-adding-read-status/flask_htmx_tailwind/src/flask_htmx_tailwind/: __init__.py
15-event-dispatch-and-handling/flask_htmx_tailwind/src/flask_htmx_tailwind/templates/: feed.html
16-creating-new-feeds/flask_htmx_tailwind/src/flask_htmx_tailwind/: __init__.py
