[project]
name = "flask-htmx-tailwind"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jose Salvatierra", email = "jslvtr@gmail.com" }
]
dependencies = [
    "flask[dotenv]>=3.0.0",
    "jinja-partials>=0.1.1",
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
